<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controllers.WordActivity"
    android:id="@+id/word_layout">

    <include android:id="@+id/tool_bar"
        layout="@layout/tool_bar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/dictionary_title"
        android:id="@+id/textViewDictionary"
        android:layout_below="@+id/tool_bar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="@dimen/edit_text_margin"
        android:layout_marginStart="@dimen/edit_text_margin"
        android:layout_marginRight="@dimen/edit_text_margin"
        android:layout_marginEnd="@dimen/edit_text_margin"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextDictionary"
        android:layout_below="@+id/textViewDictionary"
        android:inputType="textCapSentences|text"
        android:layout_alignLeft="@+id/textViewDictionary"
        android:layout_alignStart="@+id/textViewDictionary"
        android:layout_alignRight="@+id/textViewDictionary"
        android:layout_alignEnd="@+id/textViewDictionary" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/headword"
        android:id="@+id/textHeadword"
        android:layout_below="@+id/editTextDictionary"
        android:layout_alignLeft="@+id/editTextDictionary"
        android:layout_alignStart="@+id/editTextDictionary"
        android:layout_alignRight="@+id/editTextDictionary"
        android:layout_alignEnd="@+id/editTextDictionary" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextHeadword"
        android:inputType="textCapSentences|text"
        android:layout_below="@+id/textHeadword"
        android:layout_alignLeft="@+id/textHeadword"
        android:layout_alignStart="@+id/textHeadword"
        android:layout_alignRight="@+id/textHeadword"
        android:layout_alignEnd="@+id/textHeadword"
        android:imeOptions="flagNoExtractUi"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/translation"
        android:id="@+id/textViewTranslation"
        android:layout_below="@+id/editTextHeadword"
        android:layout_alignLeft="@+id/editTextHeadword"
        android:layout_alignStart="@+id/editTextHeadword"
        android:layout_alignRight="@+id/editTextHeadword"
        android:layout_alignEnd="@+id/editTextHeadword" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextTranslation"
        android:layout_below="@+id/textViewTranslation"
        android:inputType="textCapSentences|text"
        android:layout_alignLeft="@+id/textViewTranslation"
        android:layout_alignStart="@+id/textViewTranslation"
        android:layout_alignRight="@+id/textViewTranslation"
        android:layout_alignEnd="@+id/textViewTranslation"
        android:imeOptions="flagNoExtractUi"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/note"
        android:id="@+id/textViewNote"
        android:layout_below="@+id/editTextTranslation"
        android:layout_alignLeft="@+id/editTextTranslation"
        android:layout_alignStart="@+id/editTextTranslation"
        android:layout_alignRight="@+id/editTextTranslation"
        android:layout_alignEnd="@+id/editTextTranslation" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextNote"
        android:layout_below="@+id/textViewNote"
        android:inputType="textCapSentences|textMultiLine"
        android:layout_alignLeft="@+id/textViewNote"
        android:layout_alignStart="@+id/textViewNote"
        android:layout_alignRight="@+id/textViewNote"
        android:layout_alignEnd="@+id/textViewNote"
        android:imeOptions="flagNoExtractUi"/>

</RelativeLayout>